# ctrl-fin

./: .gitattributes  .gitignore  README.md  alembic.ini  alembic.ini.bak  config.json  ctrl-fin.code-workspace  prompts.md  pyproject.toml
Plano/: .$E-R_Diagram.drawio.bkp  E-R_Diagram.drawio
app/: app.py  config.py  main.py  requirements.txt  start.py
app.0.0.1/: config.py  main.py  requirements.txt
app.0.0.1/ui/: menu.py
app.0.0.2/: start.py
app.0.0.2/controller/: menu.py  orcamento.py
app.0.0.2/model/: base.py  database.py
app.0.0.2/ui/: window.py
app/controller/: menu.py  orcamento.py
app/model/: database.py  orcamento.py
app/ui/: events.py  main_frame.py  menu.py  theme.py  views.py
app/utils/: helpers.py
migrations/: env.py
migrations/versions/: 433fc0b0765a_inicializando_o_banco_de_dados.py
migrations_backup/: env.py
old_app/ui/: theme.py  views.py
poupa/: LICENSE  __main__.py  config.json  poupa.db  settings.py
poupa/controller/: account_controller.py  budget_controller.py  config.py  context_manager.py  settings.py  transaction_controller.py  validators.py
poupa/model/: account.py  budget.py  budget_schema.py  database.py  schema.py  transactions.py  validators.py
poupa/ui/cli/: __click__.py  __rich__.py  backup_menu.txt  cli.py  crud.py  dump.txt  main.py  menu.py  navigation.py
poupa/ui/cli/screens/: add_account_screen.py  add_budget_screen.py  close_screen.py  list_budgets_screen.py  main_menu.py  main_screen.py  open_account_screen.py  open_budget_screen.py
